--- a/guides/getting-started/test-structure.mdx
+++ b/guides/getting-started/test-structure.mdx
@@ -1,207 +1,249 @@
 ---
-title: "Organizing and Grouping Tests"
-description: "Understand strategies for logically grouping tests, defining test cases, and naming conventions that support scalable and maintainable unit test suites. Real-world examples show how to structure test codebases as projects grow in size and complexity."
+title: "Organizing Tests and Test Suites"
+description: "Explore strategies for grouping related tests, structuring your test files, and leveraging test fixtures for reusable setups. Learn patterns for scalable, maintainable test hierarchies."
 ---
 
-# Organizing and Grouping Tests
+# Organizing Tests and Test Suites
 
-Efficient organization and grouping of tests are crucial for scaling and maintaining reliable unit test suites as your projects grow. This guide explains key strategies to logically group your tests, define test cases clearly, and apply naming conventions that enhance readability and maintainability.
-
----
-
-## Why Organize and Group Tests?
-
-Imagine your codebase growing from tens to thousands of tests. Without clear organization, running, locating, and managing these tests becomes chaotic, slowing development and increasing the risk of errors.
-
-Proper test organization helps you:
-
-- **Quickly identify test scope** through logical groupings.
-- **Run targeted subsets** of tests relevant to a feature or component.
-- **Maintain clear ownership** and responsibilities over test code.
-- **Keep test suites scalable** and easy to navigate as new tests are added.
+GoogleTest provides a flexible and powerful way to organize your tests into logical groups and hierarchies known as test suites and fixtures. This page guides you through best practices and patterns for grouping related tests, structuring your test files, and leveraging test fixtures for sharing setup and teardown code effectively.
 
 ---
 
-## Strategies for Test Grouping
+## Why Organize Tests?
 
-### 1. Use Test Suites and Test Cases
+Imagine working in a large project with hundreds of tests. Organizing your tests allows you to:
 
-GoogleTest organizes tests hierarchically using **test suites** and **tests (test cases)**:
+- Easily locate and run related tests.
+- Share setup code to reduce duplication.
+- Understand the structure of tested components.
+- Scale your test codebase effectively as it grows.
 
-- **Test Suite**: A named collection of related tests.
-- **Test**: A single test method.
+GoogleTest’s test suite and fixture mechanisms empower you to build such maintainable and meaningful test hierarchies.
 
-Group tests that share setup, purpose, or target module/functionality into the same suite.
+---
 
-**Example:**
+## Grouping Tests with Test Suites
+
+### What is a Test Suite?
+
+A *test suite* groups together multiple related tests. Tests within the same suite should logically belong together, such as testing the same class, module, or feature.
+
+- Test suites are identified by their **TestSuiteName** — the first argument in the `TEST()` macro.
+- Each test inside the suite is uniquely named by the combination of the TestSuiteName and TestName.
+- GoogleTest executes tests grouped by their suites and reports results accordingly.
+
+### Defining Tests in Suites
+
+Use the `TEST()` macro to define tests belonging to a test suite:
 
 ```cpp
-TEST(MathUtils, ParsesValidInput) {
-  // Test code ...
+TEST(MyClassTest, HandlesEmptyInput) {
+  EXPECT_TRUE(MyClass().Process("").empty());
 }
 
-TEST(MathUtils, HandlesInvalidInput) {
-  // Test code ...
-}
-
-TEST(StringHelper, HandlesEmptyString) {
-  // Test code ...
+TEST(MyClassTest, HandlesValidInput) {
+  EXPECT_EQ(42, MyClass().Process("answer"));
 }
 ```
 
-Here `'MathUtils'` and `'StringHelper'` are test suites grouping related tests.
+Both tests belong to the `MyClassTest` suite.
 
-### 2. Define Test Fixtures for Shared Setup
+### Naming Guidelines
 
-If multiple tests share a common environment or setup code, create a test fixture:
+- Test suite names and test names **must be valid C++ identifiers** and **must not contain underscores (`_`)**. This restriction avoids internal naming collisions and compiler errors.
+- Follow your project's usual naming style for classes and functions.
+
+<Note>
+Avoid underscores to prevent naming collisions and reserved identifier conflicts in GoogleTest-generated classes.
+</Note>
+
+---
+
+## Sharing Setup Using Test Fixtures
+
+When tests share common objects, variables, or setup code, GoogleTest’s *test fixtures* allow you to write that code once and reuse it across tests.
+
+### Creating a Test Fixture
+
+1. Define a fixture class derived from `testing::Test`.
+2. Declare shared members and initialize them in the constructor or `SetUp()`.
+3. Optionally, implement `TearDown()` or destructor for cleanup.
+4. Write tests using `TEST_F()` macro referring to the fixture class.
+
+Example:
 
 ```cpp
-class DatabaseConnectionTest : public ::testing::Test {
-protected:
-  void SetUp() override {
-    db.Connect("localhost");
+class DatabaseTest : public testing::Test {
+ protected:
+  DatabaseTest() {
+    // Initialize database connection
+    db.Connect("TestDB");
   }
 
-  void TearDown() override {
+  ~DatabaseTest() override {
     db.Disconnect();
   }
 
+  void SetUp() override {
+    // Called before each test
+    db.Clear();
+  }
+
+  // Shared resource for all tests.
   Database db;
 };
 
-TEST_F(DatabaseConnectionTest, ValidQuery) {
-  // db is already connected.
+TEST_F(DatabaseTest, InsertAndRetrieve) {
+  db.Insert("key", "value");
+  EXPECT_EQ("value", db.Retrieve("key"));
 }
 
-TEST_F(DatabaseConnectionTest, EmptyResult) {
-  // Same setup.
+TEST_F(DatabaseTest, EmptyInitially) {
+  EXPECT_TRUE(db.IsEmpty());
 }
 ```
 
-This groups tests logically and reduces duplication.
+Each `TEST_F` gets a fresh instance of `DatabaseTest`, ensuring tests are isolated.
 
-### 3. Apply Naming Conventions
+<Check>
+Each test uses a new fixture object: constructor → `SetUp()` → test body → `TearDown()` → destructor.
+</Check>
 
-Good naming conventions enhance discoverability and intent sharing:
+### Best Practices
 
-- **Test Suite Names**: Use the class or module name under test.
-- **Test Names**: Use descriptive phrases for behavior or case being checked.
-- Use CamelCase or snake_case consistently.
-
-**Example:**
-
-`TEST(Parser, HandlesEmptyInput)` clearly indicates intent.
-
-### 4. Organize Tests into Directory Structures
-
-Reflect your production code structure in test directories:
-
-```
-/project
-  /src
-    /math
-    /string
-  /test
-    /math
-    /string
-```
-
-This structure scales and helps developers find tests related to specific components.
-
-### 5. Logical Grouping Techniques
-
-Within large test suites:
-
-- Use **nested suites** or prefixes to group related functionality.
-- Use **parameterized tests** to cover multiple cases efficiently without code duplication.
+- Use the constructor for simple initialization, especially for `const` members.
+- Use `SetUp()` for initialization that may fail or requires assertions.
+- Use `TearDown()` (not destructors) for cleanup that may throw exceptions.
+- Keep tests independent, avoiding state shared between tests unless properly reset.
 
 ---
 
-## Best Practices for Scalable Test Suites
+## Advanced Grouping: Parameterized and Typed Tests
 
-- **Keep tests small and focused**: One behavior or condition per test.
-- **Limit shared setup** to what is necessary, use fixtures judiciously.
-- **Document test purpose** clearly in test names and comments.
-- **Avoid overly strict expectations** to reduce brittleness.
-- Utilize mock objects effectively to isolate system components.
+For scalable and data-driven testing, GoogleTest supports:
+
+- **Value-Parameterized Tests** where tests execute with varied input values.
+- **Typed Tests** where the same logic is tested over multiple types.
+
+(These advanced topics are covered in detail in [Parameterized and Typed Tests Guide](/guides/practical-testing-patterns/parameterized-testing).)
 
 ---
 
-## Real-World Example
+## Organizing Test Files and Source Layout
 
-Here's an example reflecting a growing project:
+How you arrange your test files impacts maintainability and development speed.
+
+### Recommended Structure
+
+- Place each test suite or related group of tests in a separate source file named after the component (e.g., `widget_test.cc` for `Widget` class tests).
+- Keep tests for different logical components in different files.
+- Use namespaces or directories that mirror your project structure.
+- Organize fixtures and helper functions within the test source for clarity.
+
+<Note>
+If your fixture class is used across multiple files, declare it in a header file and implement tests in `.cc` files.
+</Note>
+
+### Example Layout
+
+```plaintext
+project/
+  src/
+    widget.h
+    widget.cc
+  tests/
+    widget_test.cc
+    database_test.cc
+```
+
+This clear separation ensures fast navigation and builds.
+
+---
+
+## Using Test Suites with Shared Setup and Teardown
+
+Sometimes, expensive resources must be shared across *all* tests in a suite.
+
+### Per-Test-Suite Setup and Teardown
+
+GoogleTest lets you define `SetUpTestSuite()` and `TearDownTestSuite()` static methods in your fixture class. These are called once before the first test and after the last test in the suite, respectively.
+
+Example:
 
 ```cpp
-// Interface
-class Calculator {
-public:
-  virtual ~Calculator() = default;
-  virtual int Add(int a, int b) = 0;
-  virtual int Divide(int a, int b) = 0;
+class NetworkTest : public testing::Test {
+ protected:
+  static void SetUpTestSuite() {
+    // Establish connection once
+    network.Connect("test_server");
+  }
+
+  static void TearDownTestSuite() {
+    network.Disconnect();
+  }
+
+  // Shared resource
+  static NetworkConnection network;
 };
 
-// Mock class
-class MockCalculator : public Calculator {
-public:
-  MOCK_METHOD(int, Add, (int a, int b), (override));
-  MOCK_METHOD(int, Divide, (int a, int b), (override));
-};
+NetworkConnection NetworkTest::network;
 
-// Grouped tests
-TEST(CalculatorAddTests, HandlesPositiveNumbers) {
-  MockCalculator calc;
-  EXPECT_CALL(calc, Add(3, 7)).WillOnce(Return(10));
-  EXPECT_EQ(calc.Add(3, 7), 10);
-}
-
-TEST(CalculatorDivideTests, HandlesDivisionByZero) {
-  MockCalculator calc;
-  EXPECT_CALL(calc, Divide(_, 0)).WillRepeatedly([](int, int){
-    throw std::runtime_error("division by zero");
-  });
-
-  EXPECT_THROW(calc.Divide(5, 0), std::runtime_error);
+TEST_F(NetworkTest, SendsData) {
+  EXPECT_TRUE(network.Send("Hello"));
 }
 ```
 
-This maintains a clean separation between tests for addition and division.
+Tip: Declare `SetUpTestSuite()` public if you want to use it with `TEST_P`.
 
 ---
 
-## Common Pitfalls
+## Common Pitfalls and How to Avoid Them
 
-- **Mixing unrelated tests in one suite**: Makes it harder to locate and maintain.
-- **Overusing fixtures for unrelated tests**: Can introduce unnecessary dependencies.
-- **Unclear naming**: Impedes fast understanding of test purpose.
-- **Too many expectations per test**: Leads to brittle and hard-to-debug failures.
-
----
-
-## Troubleshooting
-
-If tests become hard to manage or flaky:
-
-- Review your grouping: Can suites be split further?
-- Check for dependencies between tests that cause brittleness.
-- Ensure tests do not rely on execution order unless explicitly specified.
-- Use mock strictness levels (e.g., `NiceMock`, `StrictMock`) to control warning verbosity for uninteresting calls.
+- **Mixing test macros with underscores in names:** Avoid underscores in suite and test names to prevent confusing name collisions.
+- **Using uninstantiated parameterized tests:** Always instantiate `TEST_P` suites with `INSTANTIATE_TEST_SUITE_P` or suppress failure with `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST`.
+- **Not having default constructors for fixtures:** If your fixture has non-default constructors, define a default no-arg constructor.
+- **Misnaming setup/teardown methods:** Ensure `SetUp()`, `TearDown()`, `SetUpTestSuite()`, `TearDownTestSuite()` are spelled correctly (case-sensitive).
+- **Sharing mutable state without reset:** Tests should not affect each other's results via shared state.
 
 ---
 
-## Next Steps
+## Tips for Scaling Test Suites
 
-- Explore [Writing and Running Your First Test](/guides/getting-started/your-first-test) to solidify basic test creation.
-- Use [Using Mocks and Expectations](/guides/effective-testing-techniques/mocking-workflows) for interaction-based testing with mocks.
-- Scale further with [Scaling Test Suites and Ensuring Maintainability](/guides/real-world-scenarios/scaling-and-maintenance).
-
----
-
-## Additional Resources
-
-- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — A beginner-friendly introduction to mocking.
-- [Mocking Reference](../api-reference/core-apis/mocking-and-methods.html) — Comprehensive API and macro descriptions.
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Detailed usage recipes.
+- **Factor common code into fixture classes** to avoid duplication.
+- **Use parameterized tests** for testing multiple inputs without duplication.
+- **Group logically related tests** by component or feature for clarity.
+- **Avoid overly large test suites:** break them down if they become too big.
+- **Use namespaces** if multiple suites use the same names in different scopes.
 
 ---
 
-By following these principles, your test suites will remain maintainable and scalable, fostering high-quality, reliable software development.
+## Next Steps & Related Documentation
+
+- Visit [Writing and Running Your First Test](/guides/getting-started/quickstart-testing) to learn how to write your first test with GoogleTest.
+- Explore [Parameterized and Typed Tests](/guides/practical-testing-patterns/parameterized-testing) for advanced test organization.
+- Review [Test Fixtures](/docs/primer.md#same-data-multiple-tests) for shared setup/teardown techniques.
+- Check [Advanced GoogleTest Topics](/docs/advanced.md) for deeper insights on test lifecycle and setup.
+
+---
+
+## Summary Diagram: Test Organization Workflow
+
+```mermaid
+flowchart TD
+  A[Define Test Suite Names] --> B[Implement TEST() macros in source files]
+  B --> C{Do tests share setup?}
+  C -->|Yes| D[Create Test Fixture Class (derive from testing::Test)]
+  D --> E[Write TEST_F() tests using Fixture]
+  C -->|No| F[Write independent TEST() tests]
+  E --> G{Setup needed per suite?}
+  G -->|Yes| H[Define static SetUpTestSuite() / TearDownTestSuite()]
+  G -->|No| I[Define SetUp() / TearDown() for per-test setup]
+  H & I --> J[Run tests with RUN_ALL_TESTS()]
+```
+
+---
+
+By structuring your tests thoughtfully with suites and fixtures, you create a maintainable, scalable suite that reflects your code’s structure and streamlines your development workflow.
+
+
+---
