--- a/guides/integration-and-best-practices/build-integration.mdx
+++ b/guides/integration-and-best-practices/build-integration.mdx
@@ -1,254 +1,301 @@
 ---
-title: "Integrating with Build Systems (CMake & Bazel)"
-description: "Takes users through the process of integrating GoogleTest and GoogleMock with popular build systems, including CMake and Bazel. Covers configuration, dependencies, and typical issues encountered during setup."
+title: "Integrating with CMake, Bazel, and Other Build Tools"
+description: "Step-by-step approaches for adding GoogleTest and GoogleMock dependencies to your project using popular build systems. Covers common pitfalls and configuration examples."
 ---
 
-# Integrating with Build Systems (CMake & Bazel)
+# Integrating with CMake, Bazel, and Other Build Tools
 
-Effective integration of GoogleTest and GoogleMock into your build system is essential for seamless testing workflows in C++ projects. This guide walks you through the process of configuring, building, and troubleshooting GoogleTest and GoogleMock with the two most popular build systems: **CMake** and **Bazel**.
-
----
-
-## Overview
-
-GoogleTest provides a robust C++ testing framework, and GoogleMock extends it with mocking capabilities. Both projects are designed to be easy to integrate, but setup details vary depending on your build system.
-
-This guide covers:
-- Core integration concepts
-- Step-by-step instructions for CMake
-- Step-by-step instructions for Bazel
-- Managing dependencies and configuration
-- Typical issues and troubleshooting tips
+This guide walks you through practical, step-by-step methods to add GoogleTest and GoogleMock dependencies into your C++ projects using some of the most popular build systems. It also highlights common configuration pitfalls and illustrates examples for smooth integration.
 
 ---
 
-## Prerequisites
+## Workflow Overview
 
-Before proceeding, ensure you have:
+### Task Description
+Learn how to set up GoogleTest and GoogleMock correctly within existing or new projects by integrating them with build tools such as CMake and Bazel. This allows you to compile, link, and run your tests seamlessly.
 
-- A C++17-compliant compiler
-- Access to the GoogleTest source code (via git clone or as a submodule)
-- Installed CMake (>= 3.14) for CMake-based projects
-- Installed Bazel (latest stable release) for Bazel-based projects
-- Basic familiarity with your build system's configuration syntax
+### Prerequisites
+- Basic familiarity with C++ project development
+- Your project already using CMake or Bazel (or be prepared to start using them)
+- GoogleTest source code repository cloned or accessible
+- CMake version 3.14+ (for certain methods)
+- Access to internet if using download-based integration
+
+### Expected Outcome
+After following this guide, your project will successfully build and link with GoogleTest and GoogleMock libraries, enabling you to write and run unit tests using their fully featured frameworks.
+
+### Time Estimate
+Approximately 15-30 minutes, depending on your build system familiarity and environment setup.
+
+### Difficulty Level
+Intermediate (some familiarity with build systems and project configuration is helpful)
 
 ---
 
-## Integrating GoogleTest with CMake
+## Step-by-Step Integration Instructions
 
-### 1. Adding GoogleTest to Your Project
+### 1. Integrating GoogleTest with CMake
 
-**Option A: External Installation**
+GoogleTest offers multiple ways to integrate with CMake depending on your project needs.
 
-If GoogleTest is installed system-wide (e.g., via your OS’s package manager), you can locate and link it using `find_package`.
+#### a) Using Installed GoogleTest Libraries
 
-```cmake
-find_package(GTest REQUIRED)
-
-add_executable(MyTests my_tests.cpp)
-target_link_libraries(MyTests GTest::gtest GTest::gtest_main)
-```
-
-**Option B: Include GoogleTest Sources in Your Project**
-
-For full control, clone GoogleTest as a subdirectory or submodule and add it to your build.
-
-```bash
-git clone https://github.com/google/googletest.git
-```
-
-```cmake
-add_subdirectory(googletest)
-
-add_executable(MyTests my_tests.cpp)
-target_link_libraries(MyTests gtest gtest_main)
-```
-
-This builds GoogleTest and your tests together, ensuring consistent compiler flags.
-
-### 2. Basic CMakeLists.txt Example
+If GoogleTest is installed on your system (e.g., via package manager or manual install), use `find_package`:
 
 ```cmake
 cmake_minimum_required(VERSION 3.14)
 project(MyProject LANGUAGES CXX)
 
-# Enable C++17
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+find_package(GTest REQUIRED)
 
-# Add GoogleTest
-add_subdirectory(googletest)
+add_executable(my_test_executable test.cpp)
+target_link_libraries(my_test_executable GTest::gtest GTest::gtest_main)
 
-# Define your test executable
-add_executable(MyTests my_tests.cpp)
-
-# Link with GoogleTest libraries
-# gtest for test definitions
-# gtest_main for the default main
-
-target_link_libraries(MyTests gtest gtest_main)
-
-# Enable testing
-enable_testing()
-
-# Register test(s)
-add_test(NAME MyTests COMMAND MyTests)
+add_test(NAME my_test COMMAND my_test_executable)
 ```
 
-### 3. Building Your Tests
+**Outcome:** Your test executable links with the installed GoogleTest libraries.
 
-```bash
-mkdir build
-cd build
-cmake ..
-cmake --build . --target MyTests
-ctest
+#### b) Building GoogleTest as Part of Your Project Using FetchContent
+
+This approach downloads GoogleTest during the configure step and builds it alongside your project, ensuring compatible compiler and linker settings.
+
+Add this snippet to your `CMakeLists.txt`:
+
+```cmake
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+)
+
+# Prevent overriding your compiler/linker settings on Windows
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(googletest)
+
+add_executable(my_test_executable test.cpp)
+target_link_libraries(my_test_executable gtest_main)
+
+test(NAME my_test COMMAND my_test_executable)
 ```
 
-### 4. Best Practices
+**Note:** Requires CMake 3.14+.
 
-- Use the same compiler flags for both GoogleTest and your code to avoid ABI issues.
-- If you only want GoogleTest and not GoogleMock, disable GoogleMock in CMake with:
+#### c) Adding GoogleTest as a Subdirectory
 
-  ```cmake
-  set(BUILD_GMOCK OFF CACHE BOOL "")
-  ```
+If you manually add GoogleTest source inside your project tree or as a git submodule, include it with:
 
-- For Windows users building with Visual Studio, consider setting `gtest_force_shared_crt` to match the runtime linkage.
+```cmake
+add_subdirectory(external/googletest)
 
-### 5. Common Issues
+add_executable(my_test_executable test.cpp)
+target_link_libraries(my_test_executable gtest_main)
 
-- **Mismatch of runtime libraries on Windows:** Use `set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)` to fix.
-- **Missing pthreads on Linux:** Ensure you link with pthread (`-pthread`) if needed; often handled by CMake.
-- **Older CMake versions:** Use CMake >= 3.14 to ensure full compatibility with GoogleTest's modern features.
+add_test(NAME my_test COMMAND my_test_executable)
+```
+
+Modify the path (`external/googletest`) as per your project layout.
 
 ---
 
-## Integrating GoogleTest with Bazel
+### 2. Linking Your Tests
 
-Bazel is a powerful build system often used in large C++ projects. GoogleTest and GoogleMock have native Bazel support.
+You can link your test executables against these libraries depending on your needs:
 
-### 1. Using GoogleTest in Your Bazel Workspace
+| Library          | Description                                  |
+|------------------|----------------------------------------------|
+| `gtest`          | GoogleTest core testing framework             |
+| `gtest_main`     | GoogleTest with a pre-defined `main()` function |
+| `gmock`          | GoogleMock mocking framework                   |
+| `gmock_main`     | GoogleMock (includes GoogleTest) with `main()`|
 
-Add GoogleTest as an external repository or include it directly if your codebase already contains it.
+For example, to use GoogleMock with main:
 
-Example `WORKSPACE` snippet:
+```cmake
+target_link_libraries(my_test_executable gmock_main)
+```
+
+**Tip:** If you want custom test initialization, link with `gtest` or `gmock` and provide your own `main()`.
+
+---
+
+### 3. Handling C++ Standards and Runtime Library Compatibility
+
+- GoogleTest requires **C++17 or later**; specify it in your `CMakeLists.txt`:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
+- On Windows with Visual Studio, by default, GoogleTest links CRT statically but your project may use dynamic CRT. To fix linker errors, set the option:
+
+```cmake
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+```
+
+---
+
+### 4. Integrating with Bazel
+
+Bazel provides prebuilt support for GoogleTest and GoogleMock:
+
+- Add dependencies in your `BUILD` or `BUILD.bazel` file:
+
+```python
+cc_test(
+    name = "my_test",
+    srcs = ["my_test.cpp"],
+    deps = ["@com_google_googletest//:gtest_main", "@com_google_googlemock//:gmock_main"]
+)
+```
+
+- Make sure your `WORKSPACE` file includes:
 
 ```python
 http_archive(
     name = "com_google_googletest",
-    urls = ["https://github.com/google/googletest/archive/refs/tags/release-1.17.0.tar.gz"],
-    strip_prefix = "googletest-release-1.17.0",
+    urls = ["https://github.com/google/googletest/archive/release-1.13.0.tar.gz"],
+    strip_prefix = "googletest-release-1.13.0",
+)
+
+http_archive(
+    name = "com_google_googlemock",
+    urls = ["https://github.com/google/googletest/archive/release-1.13.0.tar.gz"],
+    strip_prefix = "googletest-release-1.13.0",
 )
 ```
 
-### 2. Example Bazel `BUILD` File
+Replace URLs and versions with the latest stable ones.
 
-Define your test target similarly as:
+---
 
-```python
-cc_test(
-    name = "my_tests",
-    srcs = ["my_tests.cpp"],
-    deps = [
-        "@com_google_googletest//:gtest_main",
-        "@com_google_googletest//:gmock",
-    ],
-)
+### 5. Example: Minimal CMake Project with GoogleTest
+
+```text
+/my_project
+  /CMakeLists.txt
+  /test
+    /example_test.cpp
 ```
 
-### 3. Running Tests
+`CMakeLists.txt`:
 
-Run tests using Bazel’s test command:
+```cmake
+cmake_minimum_required(VERSION 3.14)
+project(MyProject LANGUAGES CXX)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+add_executable(example_test test/example_test.cpp)
+target_link_libraries(example_test gtest_main)
+
+add_test(NAME example_test COMMAND example_test)
+```
+
+In your `example_test.cpp`:
+
+```cpp
+#include <gtest/gtest.h>
+
+TEST(SampleTest, Example) {
+  EXPECT_EQ(1 + 1, 2);
+}
+```
+
+Run in build directory:
 
 ```bash
-bazel test //:my_tests
+cmake ..
+cmake --build .
+ctest
 ```
 
-### 4. Best Practices
-
-- Make sure your Bazel version supports the syntax in your `WORKSPACE` and `BUILD` files.
-- Pin GoogleTest versions to stable releases for reproducibility.
-- Use `gtest_main` to avoid writing your own main for running tests.
-
-### 5. Troubleshooting
-
-- If tests fail to run due to missing symbols or conflicting runtimes, verify compiler flags and dependency chains.
-- Bazel sandboxing may cause environment differences; adjust your environment or rules as necessary.
+Outcome: Tests build and run, reporting results.
 
 ---
 
-## Managing Dependencies and Configuration
+### 6. Common Pitfalls and How to Avoid Them
 
-### Compiler Standards
+- **Linking errors due to mismatched CRT settings on Windows:**
+  Use `set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)` or align your project settings.
 
-GoogleTest requires at least C++17. Set this explicitly in your build files to avoid subtle bugs.
+- **Using older CMake versions:**
+  The recommended FetchContent approach requires CMake 3.14+. Otherwise, use `add_subdirectory` or install GoogleTest separately.
 
-### Controlling Debug/Release Builds
+- **Forgetting to add tests to CTest:**
+  Ensure `add_test` commands are in place to register tests for `ctest` runs.
 
-Build GoogleTest with the same debug settings as your project to avoid mismatched behavior.
+- **Multiple definitions of `main()`:**
+  If linking with `gtest_main` or `gmock_main`, do not provide your own `main()` unless necessary.
 
-### Handling GoogleMock
-
-GoogleMock is built alongside GoogleTest by default. If you do not want GoogleMock, you can disable it:
-
-- In CMake, set `BUILD_GMOCK=OFF`
-- In Bazel, omit the `gmock` dependency
-
-### Using `gtest_main`
-
-Linking with `gtest_main` provides a main function that runs all tests. This simplifies test executables.
-
----
-
-## Typical Integration Workflow
-
-1. Clone or add GoogleTest to your project.
-2. Configure your build system (CMakeLists.txt or BUILD file).
-3. Specify compiler and linker flags.
-4. Link test binaries with GoogleTest libraries.
-5. Build and run tests.
-6. Debug test failures.
+- **Not specifying C++17:**
+  GoogleTest requires C++17, so ensure your compiler flags include it.
 
 ---
 
 ## Troubleshooting & Tips
 
-<AccordionGroup title="Common Issues and Solutions">
-<Accordion title="Build Failures due to Compiler or CMake Version">
-Ensure you use a sufficiently modern compiler (supporting C++17) and at least CMake 3.14. Update your toolchain if necessary.
-</Accordion>
-<Accordion title="Runtime Mismatch on Windows">
-Set `gtest_force_shared_crt` option in CMake to match your project’s runtime linkage.
-</Accordion>
-<Accordion title="Missing pthreads on Linux/Unix">
-Link with `pthread` library if required; this is often handled automatically by CMake.
-</Accordion>
-<Accordion title="Linker Errors about Multiple Definitions">
-Check that you do not link multiple copies of GoogleTest (e.g., both submodule and system install).
-</Accordion>
-</AccordionGroup>
+### Troubleshooting Common Issues
 
-<Tip>
-For large projects, prefer adding GoogleTest as a submodule or external repo in Bazel instead of copying source code, to simplify maintenance.
-</Tip>
+- **Test executable fails to link:**
+  - Check if you linked against `gtest` / `gmock` or their `main` variants.
+  - Confirm that compiler flags and C++ standard settings are correct.
+  - On Windows, check CRT runtime linkage mismatch.
 
-<Note>
-Customizing GoogleTest setup might be necessary for non-standard environments. See `googletest/include/gtest/internal/custom/README.md` for advanced options.
-</Note>
+- **Tests compile but not found during `ctest`:**
+  - Make sure you used `add_test()` in your CMake file.
+  - Verify you are running tests from the correct build directory.
+
+- **GoogleTest source not found by CMake:**
+  - If using `add_subdirectory()`, verify the relative path is correct.
+  - If using `FetchContent`, verify your internet connection and URL.
+
+### Best Practices
+
+- Use FetchContent or submodules for version consistency.
+- Prefer linking with `gtest_main` or `gmock_main` for default `main()` implementations.
+- Align runtime library settings in Visual Studio builds with GoogleTest.
+- Group tests logically into suites, and use fixtures to share setup.
+
+### Performance Considerations
+
+- Keep GoogleTest sources separate from production sources.
+- Use test executables dedicated to testing to avoid bloated binaries.
+
+### Alternative Approaches
+
+- Use system package managers to install GoogleTest if available for your OS.
+- For embedded or limited environments, build only GoogleTest without GoogleMock by disabling `BUILD_GMOCK`.
 
 ---
 
 ## Next Steps & Related Content
 
-- After integrating your build system, start writing tests using the [GoogleTest Primer](primer.md).
-- Learn how to write parameterized and typed tests with [Parameterized & Typed Tests Guide](guides/advanced-and-real-world/parameterized-tests.md).
-- Explore mocking patterns with [Mocking Basics & Patterns](guides/advanced-and-real-world/mocking-basics-patterns.md).
-- Understand assertion macros and best practices in [Core Assertions Guide](guides/getting-started/core-assertions-best-practices.md).
-- Troubleshoot common build and runtime issues with [FAQ & Common Issues](getting-started/troubleshooting-help/faq-common-issues.md).
+- Explore the [Writing and Running Your First Test](https://github.com/google/googletest/tree/main/docs/writing-first-test.md) guide to get started writing tests after integration.
+- Review [Mocking Your First Class or Function](https://github.com/google/googletest/tree/main/docs/gmock-for-dummies.md) to add mocks and expectations.
+- Read [Test Performance and Parallel Runs](https://github.com/google/googletest/tree/main/docs/test-performance.md) for optimizing large suites.
+- Consult [Troubleshooting Common Issues](https://github.com/google/googletest/tree/main/docs/troubleshooting.md) if you face build or setup problems.
 
 ---
 
-**This concludes the integration guide for GoogleTest and GoogleMock with CMake and Bazel.**
+## References
 
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [GoogleMock Documentation](https://github.com/google/googletest/blob/main/googlemock/README.md)
+- [CMake FetchContent Documentation](https://cmake.org/cmake/help/latest/module/FetchContent.html)
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
 
+---
+
+Take advantage of these integration steps to streamline your workflow and unlock the full power of automated testing with GoogleTest and GoogleMock in your C++ projects.
